# gitHub-docs-scraper

./: .cursorignore  .editorconfig  .gitignore  README.md  github-docs-scraper.code-workspace  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: release.yml
src/: __init__.py
src/github-docs-scraper/: __main__.py
src/github-docs-scraper/scraper/: __main__.py
